                                                     -*- coding: utf-8 -*-
Changes for APR 1.6.0

  *) apr_skiplist: Fix potential corruption of skiplists leading to 
     unexpected results or crashes. 
     [Takashi Sato <takashi tks st>, Eric Covener] PR 56654.

  *) Add new --enable-allocator-guard-pages which is like allocator-uses-mmap,
     but will also add inaccessible guard pages before and after each memnode.
     This will result in higher ressource usage but allow to find/protect
     against certain buffer overflow/overread bugs. Under Linux, it may be
     necessary to increase /proc/sys/vm/max_map_count . [Stefan Fritsch]

  *) apr_skiplist: Add apr_skiplist_add() to support multiple values.

  *) Add new --enable-pool-concurrency-check configure option to detect
     thread-unsafe concurrent accesses to pools. Runtime costs should be
     relatively low. [Stefan Fritsch]

  *) Add support code to teach valgrind about APR pools and allocators.
     [Stefan Fritsch]

  *) Add apr_sockaddr_info_copy(), for making a deep copy of an
     apr_sockaddr_t into a specified pool.  [Yann Ylavic
     <ylavic.dev gmail.com>]

  *) Added Unix domain socket support.
     [Mladen Turk]

  *) Add apr_shm_delete() to compliment apr_shm_remove().
     [Jim Jagielski]

  *) Intruduce APR_PERMS_SET macros for setting the owner/group on
     objects. Currently only implemented for shm, proc and global
     mutexes on posix platforms.
     [Mladen Turk]

  *) Add apr_escape_ldap() and apr_pescape_ldap(), escaping characters
     as described by RFC4514 and RFC4515 respectively. [Graham Leggett]

Changes for APR 1.5.x and later:

  *) http://svn.apache.org/viewvc/apr/apr/branches/1.5.x/CHANGES?view=markup

Changes for APR 1.4.x and later:

  *) http://svn.apache.org/viewvc/apr/apr/branches/1.4.x/CHANGES?view=markup

Changes for APR 1.3.x and later:

  *) http://svn.apache.org/viewvc/apr/apr/branches/1.3.x/CHANGES?view=markup

Changes for APR 1.2.x and later:
